# decentrathon-2.0

./: .better-commits.json  .env  .gitignore  README.md  docker-compose.yml  main.py
app/controllers/: views.py
app/models/: schemas.py
app/services/: user.py
backend/: Dockerfile  pyproject.toml  readme.txt  requirements.txt
backend/app/: main.py
backend/app/controllers/: views.py
backend/app/models/: schemas.py
backend/app/services/: ai.py  doc.py  user.py
backend/database/: settings.py
backend/server/: api.yaml  init.py
database/: settings.py
mini-app/: .prettierrc  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
mini-app/public/locales/: en.json  ru.json
mini-app/src/api/: instance.ts
mini-app/src/app/: layout.tsx  page.tsx
mini-app/src/app/(main)/: layout.tsx  page.tsx
mini-app/src/app/_assets/: globals.css
mini-app/src/app/init-data/: page.tsx
mini-app/src/app/launch-params/: page.tsx
mini-app/src/app/pharmacy/: page.tsx
mini-app/src/app/theme-params/: page.tsx
mini-app/src/app/ton-connect/: page.tsx
mini-app/src/components/: ErrorBoundary.tsx  Page.tsx
mini-app/src/components/BottomBar/: Bottombar.tsx  styles.module.css
mini-app/src/components/CheckHealth/: CheckHealth.tsx
mini-app/src/components/DisplayData/: DisplayData.tsx
mini-app/src/components/Link/: Link.tsx
mini-app/src/components/RGB/: RGB.tsx
mini-app/src/core/: init.ts
mini-app/src/hooks/: useTelegramMock.ts
mini-app/src/services/: doctors.service.ts
mini-app/src/types/: doctors.types.ts
server/: init.py
(+39 files in other folders)
