[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nurali <nurali27@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
fastapi = "^0.115.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
