[tool.poetry]
name = "backend"
version = "1"
description = ""
authors = ["hpns47 <dani.abd.20069@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.6.0"
argcomplete = "3.5.1"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
dnspython = "2.6.1"
fastapi = "0.115.0"
h11 = "0.14.0"
idna = "3.10"
motor = "3.6.0"
packaging = "24.1"
pipx = "1.7.1"
platformdirs = "4.3.6"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pymongo = "4.9.1"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
requests = "2.32.3"
sniffio = "1.3.1"
starlette = "0.38.6"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
userpath = "1.9.2"
uvicorn = "0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
